--- a/style.css
+++ b/style.css
@@ -15,10 +15,8 @@
 }
 body {
   margin: 0;
-  overflow: hidden;
-  height: 100vh;
   font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 500;
   background-color: #333;
   color: #fff;
@@ -35,9 +33,6 @@ h2, p {
 img {
   pointer-events: none;
 }
-audio {
-  display: none;
-}
 :focus {
   outline: none;
 }
@@ -45,30 +40,95 @@ audio {
   border: 0;
 }
 
-.container {
+/* volume input reset */
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
   width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+/* Special styling for WebKit/Blink */
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -26px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb {
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: rgba(255,255,255, 0.4);
+  border-radius: 100px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(255,255,255, 0.4);
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: rgba(255,255,255, 0.4);
+  border-radius: 100px;
+}
+
+input[type=range] {
+  width: 80%;
+  margin: 0 10%;
+  position: absolute;
+  display: block;
+  bottom: 60px;
+}
+
+.container {
+  width: 80vw
+  margin: 0 auto;
   overflow: hidden;
   height: 100vh;
 }
-.carousel, .gallery-cell {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-}
-.gallery-cell {
-  padding: 10%;
-}
-.gallery-cell.paused {
-  background-color: #c5cacf;
-}
-.gallery-cell.playing {
-  background-color: #fd0c5c;
-}
-.dudes {
-  display: block;
-  margin: 5rem auto 2rem;
-}
 
-.flickity-prev-next-button {
-  display: none;
+.buttons {
+  width: 100%;
+  position: absolute;
+  bottom: 160px;
+  display: flex;
+  justify-content: space-around;
+}
+.play {
+  font-size: 25px;
+}
+.prev, .next {
+  font-size: 20px;
 }
