--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 22px;
   font-weight: 500;
-  background-color: #333;
+  background-color: #fd0c5c;
   color: #fff;
 }
 h2 {
@@ -68,48 +68,55 @@ input[type=range]::-ms-track {
 /* Special styling for WebKit/Blink */
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 60px;
-  width: 60px;
-  border-radius: 100px;
+  height: 5em;
+  width: 5em;
+  border-radius: 30em;
   background: #ffffff;
+  background-image: url(img/vol.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 3em;
   cursor: pointer;
-  margin-top: -26px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+  margin-top: -29px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+  transition: all 0.09s ease-out;
 }
 
 /* All the same stuff for Firefox */
 input[type=range]::-moz-range-thumb {
-  height: 60px;
-  width: 60px;
+  height: 5em;
+  width: 5em;
   border-radius: 100px;
   background: #ffffff;
   cursor: pointer;
+  transition: all 0.09s ease-out;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
-  background: rgba(255,255,255, 0.4);
+  background:  #f4f22a;
   border-radius: 100px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: rgba(255,255,255, 0.4);
+  background:  #f4f22a;
 }
 
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
-  background: rgba(255,255,255, 0.4);
+  background:  #f4f22a;
   border-radius: 100px;
 }
 
 input[type=range] {
-  width: 80%;
-  margin: 0 10%;
+  width: 70%;
+  margin: 0;
   position: absolute;
+  bottom: 50px;
+  left: 15%;
   display: block;
-  bottom: 60px;
 }
 
 .container {
@@ -122,13 +129,52 @@ input[type=range] {
 .buttons {
   width: 100%;
   position: absolute;
-  bottom: 160px;
+  bottom: 140px;
+  margin-left: 0.5em;
+
+
   display: flex;
   justify-content: space-around;
 }
-.play {
-  font-size: 25px;
+.button {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 3em;
+  height: 5em;
+  width: 5em;
+  border-radius: 30em;
+  border: none;
+  transition: all 0.09s ease-out;
 }
-.prev, .next {
+.button:active {
+  transform: scale(0.9);
+}
+
+.play {
+  position: absolute;
+  bottom: 220px;
+  left: 50%;
+  margin-left: -2.5em;
+  transform: rotate(3deg);
+  font-size: 27px;
+  background-color: #f4f22a;
+  background-image: url(img/play.svg);
+}
+.prev {
+  margin-left: -1.1em;
+  transform: rotate(-9deg);
+  font-size: 18px;
+  background-color: #6e54ed;
+  background-image: url(img/prev.svg);
+}
+.next {
+  margin-left: 1em;
+  margin-top: 0.3em;
+  transform: rotate(7deg);
   font-size: 20px;
+  background-color: #54edcd;
+  background-image: url(img/next.svg);
+}
+.vol {
+  transform: translate(0.2em) rotate(-3deg);
 }
