--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   font-weight: 500;
   background-color: #fd0c5c;
   color: #fff;
+  overflow: hidden;
 }
 h2 {
   font-weight: 300;
@@ -87,7 +88,12 @@ input[type=range]::-moz-range-thumb {
   width: 5em;
   border-radius: 100px;
   background: #ffffff;
+  background-image: url(img/vol.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 3em;
   cursor: pointer;
+  border: none;
   transition: all 0.09s ease-out;
 }
 
@@ -130,8 +136,7 @@ input[type=range] {
   width: 100%;
   position: absolute;
   bottom: 140px;
-  margin-left: 0.5em;
-
+  transform: translateX(0.5em);
 
   display: flex;
   justify-content: space-around;
@@ -144,6 +149,7 @@ input[type=range] {
   width: 5em;
   border-radius: 30em;
   border: none;
+  cursor: pointer;
   transition: all 0.09s ease-out;
 }
 .button:active {
