--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 body {
   margin: 0;
-  font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 22px;
   font-weight: 500;
   background-color: #fd0c5c;
@@ -44,12 +44,13 @@ img {
 /* volume input reset */
 input[type=range] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-  width: 100%; /* Specific width is required for Firefox. */
+  width: 80%; /* Specific width is required for Firefox. */
   background: transparent; /* Otherwise white in Chrome */
 }
 
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
+  transform: translateY(6px);
 }
 
 input[type=range]:focus {
@@ -72,6 +73,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 5em;
   width: 5em;
   border-radius: 30em;
+  border: none;
   background: #ffffff;
   background-image: url(img/vol.svg);
   background-position: center center;
@@ -80,6 +82,9 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   margin-top: -29px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
   transition: all 0.09s ease-out;
+}
+input[type=range]::-webkit-slider-thumb:active {
+  transform: scale(0.9);
 }
 
 /* All the same stuff for Firefox */
@@ -94,35 +99,32 @@ input[type=range]::-moz-range-thumb {
   background-size: 3em;
   cursor: pointer;
   border: none;
+}
+input[type=range]::-moz-range-thumb:active {
   transition: all 0.09s ease-out;
+  transform: scale(0.9);
 }
 
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
-  background:  #f4f22a;
+  background:  #6e54ed;
   border-radius: 100px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background:  #f4f22a;
+  background:  #6e54ed;
 }
 
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
-  background:  #f4f22a;
+  background:  #6e54ed;
   border-radius: 100px;
 }
 
 input[type=range] {
-  width: 70%;
-  margin: 0;
-  position: absolute;
-  bottom: 50px;
-  left: 15%;
-  display: block;
 }
 
 .container {
@@ -145,6 +147,7 @@ input[type=range] {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 3em;
+  background-color: white;
   height: 5em;
   width: 5em;
   border-radius: 30em;
@@ -158,29 +161,38 @@ input[type=range] {
 
 .play {
   position: absolute;
-  bottom: 220px;
+  bottom: 230px;
   left: 50%;
-  margin-left: -2.5em;
-  transform: rotate(3deg);
+  margin-left: -4.5em;
+  transform: rotate(-5deg);
   font-size: 27px;
-  background-color: #f4f22a;
   background-image: url(img/play.svg);
 }
-.prev {
-  margin-left: -1.1em;
-  transform: rotate(-9deg);
-  font-size: 18px;
-  background-color: #6e54ed;
-  background-image: url(img/prev.svg);
+.play:active {
+  transform: rotate(-5deg) scale(0.9);
 }
 .next {
-  margin-left: 1em;
+  position: absolute;
+  margin-left: 1.3em;
+  bottom: 180px;
+  left: 50%;
   margin-top: 0.3em;
-  transform: rotate(7deg);
+  transform: rotate(12deg);
   font-size: 20px;
-  background-color: #54edcd;
   background-image: url(img/next.svg);
 }
-.vol {
+.next:active {
+  transform: rotate(12deg) scale(0.9);
+}
+
+.volume-container {
+  position: absolute;
+  bottom: 70px;
+  width: 100%;
+}
+.volume {
+  display: block;
+  margin: 0 auto;
   transform: translate(0.2em) rotate(-3deg);
+  max-width: 350px;
 }
