--- a/style.css
+++ b/style.css
@@ -166,13 +166,16 @@ input[type=range] {
   transform: rotate(-5deg);
   background-image: url(img/pause.svg);
 }
+.play {
+  background-image: url(img/play.svg);
+}
 .pause:active {
   transform: rotate(-5deg) scale(0.9);
 }
 .reset {
   bottom: 280px;
   margin-left: 0.3em;
-  font-size: 24px;
+  font-size: 22px;
   transform: rotate(-30deg);
   background-image: url(img/reset.svg);
 }
@@ -223,22 +226,21 @@ input[type=range] {
 }
 @media screen and (max-height: 350px) {
   .pause {
-    font-size: 18px;
+    font-size: 21px;
     margin-left: -7.6em;
     bottom: 130px;
   }
-  .next {
+  .reset {
     font-size: 17px;
     margin-left: -1.7em;
-    bottom: 153px;
+    bottom: 154px;
   }
-  .reset {
-    font-size: 16px;
+  .next {
+    font-size: 17px;
     margin-left: 4.5em;
-    bottom: 120px;
+    bottom: 130px;
   }
   .volume-container {
-    font-size: 16px;
     bottom: 55px;
   }
 }
