--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ input[type=range] {
   border-radius: 30em;
   border: none;
   cursor: pointer;
-  transition: all 0.09s ease-out;
+  transition: transform 0.09s ease-out;
 }
 .button:active {
   transform: scale(0.9);
@@ -168,6 +168,7 @@ input[type=range] {
 }
 .play {
   background-image: url(img/play.svg);
+  background-size: 3em;
 }
 .pause:active {
   transform: rotate(-5deg) scale(0.9);
